// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <p>
    No expenses
  </p>
</div>
`;

exports[`Should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <ExpenseListItem
    amount={13000}
    createdAt={0}
    description="Gym"
    id="1"
    key="1"
  />
  <ExpenseListItem
    amount={20950}
    createdAt={-345600000}
    description="Rent"
    id="2"
    key="2"
  />
  <ExpenseListItem
    amount={4500}
    createdAt={345600000}
    description="Credit card"
    id="3"
    key="3"
  />
</div>
`;
